--- a/src/components/Game/GameRoomComponent.css
+++ b/src/components/Game/GameRoomComponent.css
@@ -1,5 +1,6 @@
 .game-room-container {
     display: flex;
+    flex-direction: column;
     height: 600px;
   }
   
@@ -9,6 +10,12 @@
     min-width: 200px; /* 최소 너비 설정 (조정 가능) */
     border: 1px solid #ccc; /* 테두리 추가 (옵션) */
     padding: 10px; /* 내용 여백 추가 (옵션) */
+  }
+
+  .body-area {
+    display: flex;
+    flex-direction: row; /* 이 설정은 요소들이 가로로 배치되도록 합니다 */
+    flex: 1;
   }
   
   .center-area {
